# rm_anime_bg

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  stale-issues.yml  typos.yml
rm_anime_bg/: cli.py
tests/: test_cli.py
