[misc]
stable_version = "0.1.3"

[tool.poetry]
name = "rm_anime_bg"
version = "0.1.2"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
repository = "https://github.com/shirayu/rm_anime_bg.git"
packages = [{include = "rm_anime_bg"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = ">=4.7.0.72"
huggingface-hub = ">=0.14.1"
numpy = ">=1.24.2"
onnxruntime = ">=1.14.1"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
toml = "^0.10.2"
flake8 = ">=5.0.4"
pydocstyle = ">=6.1.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rm_anime_bg = "rm_anime_bg.cli:main"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
exclude = [".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

