
[tool.poetry]
name = "rm_anime_bg"
version = "0.2.0"
description = ""
license = "Apache-2.0"
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
readme = "README.md"
repository = "https://github.com/shirayu/rm_anime_bg.git"
packages = [{include = "rm_anime_bg"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
opencv-python = ">=4.7.0.72"
huggingface-hub = ">=0.14.1"
numpy = ">=1.24.2"
torch = ">=2.1.0"
onnxruntime = { version = "^1.15.1", optional = true }
onnxruntime-gpu = { version = "^1.15.1", optional = true }

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"

[tool.poetry.scripts]
rm_anime_bg = "rm_anime_bg.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
exclude = ["**/third", ".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
